--- a/core/core/src/main/resources/application.properties
+++ b/core/core/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=core
 logging.level=INFO
+logging.level.org.springframework=INFO
 logging.level.org.springframework.web=DEBUG
 logging.level.hello.core=DEBUG
